Fix up App Lab share on mobile

--- a/apps/style/applab/style.scss
+++ b/apps/style/applab/style.scss
@@ -226,6 +226,12 @@ div#visualizationResizeBar {
   }
 }
 
+#visualizationColumn.chromelessShare {
+  #designToggleRow, #gameButtons {
+    display: none;
+  }
+}
+
 #divApplab {
   overflow: hidden;
   outline: none;
